# Solin

./: .gitignore  create_tables.py  main.py  pyproject.toml  vercel.json
src/application/uses_cases/auth/: auth_service.py
src/core/: config.py
src/domain/: models.py
src/infrastructure/: database.py  openlibrary_client.py
src/interface/api/: dependencies.py
src/interface/api/routes/: auth.py  books.py  comments.py  user_books.py
src/interface/schemas/: auth.py  books.py
