[project]
name = "solin"
version = "1.0.0"
description = "A Netflix-like platform for books"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.35",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.12",
    "httpx>=0.27.2",
    "email-validator>=2.3.0",
    "psycopg2>=2.9.11",
    "bcrypt==4.3.0",
]
